k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crm-service
  labels:
    q10.com/platform: "true"
