k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-template
  namespace: service-template
spec:
  selector:
    app: service-template
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
